# basealt_test

./: CMakeLists.txt  README.md  build_and_run.sh  download_curl_lib.sh  download_curl_nlohmann_lib.sh  final_bash.sh  run.sh  task.cpp  task.md  task.txt
build_lib/: CMakeCache.txt  Makefile  cmake_install.cmake
build_main/: CMakeCache.txt  Makefile  cmake_install.cmake  main
main/: CMakeLists.txt  main  main.cpp
shared_lib/: CMakeLists.txt  fetch_and_save.cpp  fetch_and_save.h
task/: build_and_run.sh  final_bash.sh  task.cpp
